{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 214,
  "lineage": "512da5f0-2cb4-a2e7-a816-df6333ba441f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgwa-gis-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-06546362d0b901b42",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-005921e193fed799b",
              "subnet-075b52535a58670b3"
            ],
            "tags": {
              "Environment": "Test"
            },
            "tags_all": {
              "Environment": "Test"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0430826c231550bf5",
            "vpc_id": "vpc-04acabd40adb8dc5a",
            "vpc_owner_id": "148761648635"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gis-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8dd33d1a101f112",
            "arn": "arn:aws:ec2:il-central-1:148761648635:instance/i-08e731b008a050973",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-08e731b008a050973",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032a3c431f30b3492",
            "private_dns": "ip-10-131-2-214.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.131.2.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-033fb4d79a127c45d",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0418c5ef6e8b8abb8",
            "tags": {
              "Name": "i-ayalonhw-gis-test"
            },
            "tags_all": {
              "Name": "i-ayalonhw-gis-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00118daa4f0eb1043",
              "sg-0255f3de7c1f9e4e7",
              "sg-0a08437aacef25ef2",
              "sg-0a863dc4ede9fcb28"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-active-directory-op-aws",
            "aws_security_group.ec2-to-tgw",
            "aws_security_group.prtg-access",
            "aws_security_group.ssm-to-ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gis-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8dd33d1a101f112",
            "arn": "arn:aws:ec2:il-central-1:148761648635:instance/i-0a9fbf6c8c6ff65d2",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0141b47d7cbe4decb",
                "volume_size": 500,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-0a9fbf6c8c6ff65d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0575441e652743bfd",
            "private_dns": "ip-10-131-1-4.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.131.1.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05786357deabdcefa",
                "volume_size": 150,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c91967500cfa6ce",
            "tags": {
              "Name": "i-ayalon-gis-test"
            },
            "tags_all": {
              "Name": "i-ayalon-gis-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00118daa4f0eb1043",
              "sg-0255f3de7c1f9e4e7",
              "sg-0a08437aacef25ef2",
              "sg-0a863dc4ede9fcb28"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-active-directory-op-aws",
            "aws_security_group.ec2-to-tgw",
            "aws_security_group.prtg-access",
            "aws_security_group.ssm-to-ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-to-tgw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.20.20/32",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2968197c68e80642893399335",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2968197c68e8064",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0430826c231550bf5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_tgw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2968197c68e80641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2968197c68e8064",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0430826c231550bf5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-GIS-Test-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:route-table/rtb-0f2968197c68e8064",
            "id": "rtb-0f2968197c68e8064",
            "owner_id": "148761648635",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0430826c231550bf5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.20.20/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0430826c231550bf5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTB-GIS-Test-Private"
            },
            "tags_all": {
              "Name": "RTB-GIS-Test-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-GIS-Test-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:route-table/rtb-0086527b29e2db95a",
            "id": "rtb-0086527b29e2db95a",
            "owner_id": "148761648635",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RTB-GIS-Test-Public"
            },
            "tags_all": {
              "Name": "RTB-GIS-Test-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-GIS-Test-RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:route-table/rtb-0f8c8fd75b478c3a9",
            "id": "rtb-0f8c8fd75b478c3a9",
            "owner_id": "148761648635",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RTB-GIS-Test-RDS"
            },
            "tags_all": {
              "Name": "RTB-GIS-Test-RDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-GIS-Test-TGWA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:route-table/rtb-097aa6e459e4de3bc",
            "id": "rtb-097aa6e459e4de3bc",
            "owner_id": "148761648635",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RTB-GIS-Test-TGWA"
            },
            "tags_all": {
              "Name": "RTB-GIS-Test-TGWA"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-gis-test-private-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ac553d7c50d2257",
            "route_table_id": "rtb-0f2968197c68e8064",
            "subnet_id": "subnet-0418c5ef6e8b8abb8"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-gis-test-public-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbd994f8c236a554",
            "route_table_id": "rtb-0086527b29e2db95a",
            "subnet_id": "subnet-030fd3f1465c47350"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-Public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-gis-test-public-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa0599f2742a1ca4",
            "route_table_id": "rtb-0086527b29e2db95a",
            "subnet_id": "subnet-01036007c9cbe5704"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-Public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-gis-test-rds-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012e90ca229063970",
            "route_table_id": "rtb-0f8c8fd75b478c3a9",
            "subnet_id": "subnet-0295014a933e19a80"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-RDS",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-gis-test-rds-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080f2605eed53e879",
            "route_table_id": "rtb-0f8c8fd75b478c3a9",
            "subnet_id": "subnet-0e1e573c1dd8d5629"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-RDS",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-gis-test-tgwa-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c40b0d6dd86f309a",
            "route_table_id": "rtb-097aa6e459e4de3bc",
            "subnet_id": "subnet-075b52535a58670b3"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-TGWA",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-gis-test-tgwa-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075f96db97e2a084b",
            "route_table_id": "rtb-097aa6e459e4de3bc",
            "subnet_id": "subnet-005921e193fed799b"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-TGWA",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets-gis-test-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a42958b1158ef864",
            "route_table_id": "rtb-0f2968197c68e8064",
            "subnet_id": "subnet-00c91967500cfa6ce"
          },
          "dependencies": [
            "aws_route_table.RTB-GIS-Test-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-active-directory-op-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:security-group/sg-00118daa4f0eb1043",
            "description": "ec2-to-active-directory",
            "egress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.110.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.131.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 135,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 135
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 3268,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3268
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 3269,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3269
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 389
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 389
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 636,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 636
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [
                  "172.16.10.16/32"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              }
            ],
            "id": "sg-00118daa4f0eb1043",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.131.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-to-active-directroy",
            "name_prefix": "",
            "owner_id": "148761648635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-to-tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:security-group/sg-0a863dc4ede9fcb28",
            "description": "ec2-to-tgw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a863dc4ede9fcb28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2-to-tgw",
            "name_prefix": "",
            "owner_id": "148761648635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prtg-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:security-group/sg-0255f3de7c1f9e4e7",
            "description": "prtg-access",
            "egress": [],
            "id": "sg-0255f3de7c1f9e4e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 135,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 135
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 161,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 162
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 49152,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prtg-access",
            "name_prefix": "",
            "owner_id": "148761648635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:security-group/sg-0a08437aacef25ef2",
            "description": "ssm-to-ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "10.131.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a08437aacef25ef2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.131.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-to-ec2",
            "name_prefix": "",
            "owner_id": "148761648635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-00c91967500cfa6ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.131.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c91967500cfa6ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-private-az1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-private-az1"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-0418c5ef6e8b8abb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.131.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0418c5ef6e8b8abb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-private-az2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-private-az2"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-030fd3f1465c47350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.131.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030fd3f1465c47350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-public-az1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-public-az1"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-01036007c9cbe5704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.131.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01036007c9cbe5704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-public-az2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-public-az2"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-0295014a933e19a80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.131.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0295014a933e19a80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-rds-az1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-rds-az1"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-0e1e573c1dd8d5629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.131.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e573c1dd8d5629",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-rds-az2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-rds-az2"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgwa_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-075b52535a58670b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.131.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075b52535a58670b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-tgwa-az1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-tgwa-az1"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:subnet/subnet-005921e193fed799b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.131.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005921e193fed799b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761648635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-gis-test-tgwa-az2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-gis-test-tgwa-az2"
            },
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:vpc/vpc-04acabd40adb8dc5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.131.0.0/16",
            "default_network_acl_id": "acl-0c51d7f0589b66336",
            "default_route_table_id": "rtb-0cf8666feacb71c90",
            "default_security_group_id": "sg-01e9d9731e2e016d5",
            "dhcp_options_id": "dopt-0fc3ef0c9d5eaafe7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04acabd40adb8dc5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf8666feacb71c90",
            "owner_id": "148761648635",
            "tags": {
              "Environment": "Test",
              "Name": "vpc-gis-test"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "vpc-gis-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:vpc-endpoint/vpce-0090f6d006f0e0dc8",
            "dns_entry": [
              {
                "dns_name": "vpce-0090f6d006f0e0dc8-6rzndd25.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0090f6d006f0e0dc8-6rzndd25-il-central-1a.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0090f6d006f0e0dc8-6rzndd25-il-central-1b.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ssm.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z028184919GO96YV7JZ9C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0090f6d006f0e0dc8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04c98abc694f26674",
              "eni-0ccf3e0013e4b0925"
            ],
            "owner_id": "148761648635",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a08437aacef25ef2"
            ],
            "service_name": "com.amazonaws.il-central-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.131.1.35",
                "subnet_id": "subnet-00c91967500cfa6ce"
              },
              {
                "ipv4": "10.131.2.190",
                "subnet_id": "subnet-0418c5ef6e8b8abb8"
              }
            ],
            "subnet_ids": [
              "subnet-00c91967500cfa6ce",
              "subnet-0418c5ef6e8b8abb8"
            ],
            "tags": {
              "Name": "SSM Endpoint - ssm"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:vpc-endpoint/vpce-06f2ed0a898e2b02b",
            "dns_entry": [
              {
                "dns_name": "vpce-06f2ed0a898e2b02b-foo3c1au.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-06f2ed0a898e2b02b-foo3c1au-il-central-1a.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-06f2ed0a898e2b02b-foo3c1au-il-central-1b.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ssmmessages.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z0427133R7IVOWD7YXZF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06f2ed0a898e2b02b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07bbdaa09f10413d4",
              "eni-0a118b92c48d64efa"
            ],
            "owner_id": "148761648635",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a08437aacef25ef2"
            ],
            "service_name": "com.amazonaws.il-central-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.131.1.137",
                "subnet_id": "subnet-00c91967500cfa6ce"
              },
              {
                "ipv4": "10.131.2.72",
                "subnet_id": "subnet-0418c5ef6e8b8abb8"
              }
            ],
            "subnet_ids": [
              "subnet-00c91967500cfa6ce",
              "subnet-0418c5ef6e8b8abb8"
            ],
            "tags": {
              "Name": "SSM Endpoint - ssmmessages"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:148761648635:vpc-endpoint/vpce-063153d85bda0dfa8",
            "dns_entry": [
              {
                "dns_name": "vpce-063153d85bda0dfa8-e182cyfp.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-063153d85bda0dfa8-e182cyfp-il-central-1b.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-063153d85bda0dfa8-e182cyfp-il-central-1a.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ec2messages.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z02822601PFE3G3PRQVNG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-063153d85bda0dfa8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07623c9d2022ea784",
              "eni-0a93015a7e699cc64"
            ],
            "owner_id": "148761648635",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a08437aacef25ef2"
            ],
            "service_name": "com.amazonaws.il-central-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.131.1.37",
                "subnet_id": "subnet-00c91967500cfa6ce"
              },
              {
                "ipv4": "10.131.2.10",
                "subnet_id": "subnet-0418c5ef6e8b8abb8"
              }
            ],
            "subnet_ids": [
              "subnet-00c91967500cfa6ce",
              "subnet-0418c5ef6e8b8abb8"
            ],
            "tags": {
              "Name": "SSM Endpoint - ec2messages"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04acabd40adb8dc5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}